--- a/css/style.css
+++ b/css/style.css
@@ -2,6 +2,11 @@ body {
     background: #ffffff;
 }
 
+.container {
+    width: 85vw;
+    margin: 0 auto;
+}
+
 
 /* CLEARFIX METHOD */
 
@@ -18,5 +23,96 @@ body {
 a:link,
 a:visited {
     text-decoration: none;
-    color: white;
+}
+
+
+/* NAVIGATION */
+
+.navigation {
+    width: 100%;
+    background: #ffffff;
+    position: fixed;
+    color: #202242;
+}
+
+.navigation .container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 150px;
+}
+
+.header-menu {
+    width: 100%;
+    margin: 0 50px;
+    text-transform: uppercase;
+    font-family: 'Lato', sans-serif;
+    font-weight: 400;
+}
+
+.header-menu li {
+    margin-left: 20px;
+}
+
+.header-menu a {
+    color: #202242;
+}
+
+.menu-active a,
+.header-menu a:hover {
+    color: #ffe13e;
+}
+
+.menu-active {
+    font-weight: 700;
+}
+
+.header-menu ul {
+    display: flex;
+    justify-content: space-around;
+}
+
+.header-contact {
+    padding-left: 45px;
+    white-space: nowrap;
+    height: 100%;
+    border-left: #ebebeb 1px solid;
+    display: flex;
+    flex-wrap: wrap;
+    align-content: center;
+    justify-content: center;
+    font-family: 'Raleway', sans-serif;
+}
+
+.contact-help {
+    font-size: 12px;
+    font-weight: 600;
+    margin-bottom: 20px;
+}
+
+.chat-button {
+    font-size: 14px;
+    font-weight: 600;
+    background: #ffe13e;
+    padding: 14px 30px;
+    margin-right: 20px;
+}
+
+.contact-number {
+    font-family: 'Lato', sans-serif;
+    font-size: 24px;
+    padding-left: 20px;
+    height: 24px;
+    margin-top: 9px;
+    border-left: #ebebeb 1px solid;
+}
+
+
+/* SPLASH */
+
+.splash {
+    width: 100%;
+    height: 940px;
+    background: linear-gradient( rgba(47, 47, 47, 0.33), rgba(47, 47, 47, 0.33)), url(../img/bg.jpg);
+    background-size: cover;
 }
